kubernetes/apps/disabled/drone/server/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: drone-ci-ingress
  namespace: drone-ci
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`drone.fascinated.cc`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: compress
          namespace: traefik
      services:
        - name: drone-service
          port: 80
  tls:
    secretName: fascinated-cc
